08.08 fixes in sass, removed the gap in the right calculator container and added a gap in the path history in the left body

--- a/src/sass/components/_radio.sass
+++ b/src/sass/components/_radio.sass
@@ -1,7 +1,7 @@
 .radio-group 
     display: flex
     flex-direction: column
-    gap: 10px
+    // gap: 10px
     .radio input[type="radio"]
         display: none
     .radio
