--- a/src/sass/layouts/_popup.sass
+++ b/src/sass/layouts/_popup.sass
@@ -132,6 +132,12 @@
                 display: flex
                 flex-direction: column
                 justify-content: flex-end
+                gap: 20px
+                .history__checkbox-list
+                    display: flex
+                    flex-direction: column
+                    font-size: 14px
+                    gap: 10px
         .popup__container--right
             display: grid
             grid-template-rows: auto 1fr auto
